--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,14 +26,9 @@ ext {
     roomVersion = '2.1.0-alpha06'
     archLifecycleVersion = '2.1.0-alpha04'
     androidxArchVersion = '2.0.0'
-    coroutines = '1.2.0'
 }
 
-kotlin {
-    experimental {
-        coroutines "enable"
-    }
-}
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -44,6 +39,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+
 
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
