--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <dist:module dist:instant="true"/>
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
             android:allowBackup="true"
@@ -14,6 +14,11 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".CountryActivity">
+        </activity>
+        <activity android:name=".SearchActivity">
+            android:windowSoftInputMode="adjustNothing"
+        </activity>
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
