--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,17 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.edbutch.materialcountries"
-        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        minSdkVersion 23
     }
     buildTypes {
         release {
@@ -26,27 +28,31 @@ ext {
     roomVersion = '2.1.0-alpha06'
     archLifecycleVersion = '2.1.0-alpha04'
     androidxArchVersion = '2.0.0'
-    androidX_version = "1.1.0-alpha03"
+    androidX_version = "1.1.0-rc01"
     material_androidX_version = "1.1.0-alpha04"
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
     implementation 'com.mikepenz:materialdrawer:6.1.2'
 
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test:rules:1.1.1'
+    implementation "android.arch.persistence.room:runtime:$roomVersion"
+    kapt "android.arch.persistence.room:compiler:$roomVersion"
+
+
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
 
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
     implementation "androidx.appcompat:appcompat:${androidX_version}"
@@ -55,11 +61,9 @@ dependencies {
     implementation "com.google.android.material:material:${material_androidX_version}"
 
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
 }
